fix screen's z-index

--- a/css.css
+++ b/css.css
@@ -58,7 +58,7 @@ button {
   bottom: 0;
   left: 0;
   background-color: #00000080;
-  z-index: 9;
+  z-index: 0;
   opacity: 0;
 }
 #menu:checked+.screen{
